# RAD-seq_EM_model

./: .gitignore  404.html  LICENSE  README.md  Snakefile  err.snakemake  index.html  mkdocs.yml  objects.inv  pyproject.toml  results  sitemap.xml
accmix/: annotate.py  cli.py  evaluate.py  model_core.py  scanner.py  utils.py
accmix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api/: index.html
changelog/: index.html
cli/: index.html
data/: index.html
development/: index.html
docs/: api.md  changelog.md  cli.md  data.md  development.md  examples.md  index.md  installation.md  reproducibility.md  tutorial.md
example_data/: evaluate_config.example.json
examples/: index.html
installation/: index.html
notebooks/: Figure6_efg.Rmd
reproducibility/: index.html
results_backup/: ELAVL1_M00053_2.00.evaluate.config.json  ELAVL1_M00053_2.00.model.json  ELAVL1_M00130_2.00.evaluate.config.json  ELAVL1_M00130_2.00.model.json  ELAVL1_M00134_2.00.evaluate.config.json  ELAVL1_M00134_2.00.model.json  ELAVL1_M00254_2.00.evaluate.config.json  ELAVL1_M00254_2.00.model.json  HNRNPA1_M00469_2.00.evaluate.config.json  HNRNPA1_M00469_2.00.model.json  HNRNPC_M00047_2.00.evaluate.config.json  HNRNPC_M00047_2.00.model.json  HNRNPC_M00735_2.00.evaluate.config.json  HNRNPC_M00735_2.00.model.json  PTBP1_M00249_2.00.evaluate.config.json  PTBP1_M00249_2.00.model.json  PTBP1_M00250_2.00.evaluate.config.json  PTBP1_M00250_2.00.model.json  RBP_Motif.20251204_145147.model.json  SRSF10_M00041_2.00.evaluate.config.json  SRSF10_M00041_2.00.model.json  SRSF10_M00108_2.00.evaluate.config.json  SRSF10_M00108_2.00.model.json  SRSF10_M00109_2.00.evaluate.config.json  SRSF10_M00109_2.00.model.json  SRSF10_M00110_2.00.evaluate.config.json  SRSF10_M00110_2.00.model.json  (+34 more)
scripts/: em_utils.py  (+9 more)
(+28 files in other folders)
